--- a/index.html
+++ b/index.html
@@ -1,95 +1,91 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notícias IBGE</title>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portal de Notícias do IBGE</title>
 
-    <link rel="stylesheet" href="./css/styles.css">>
-</head>
-<body>
+    <link rel="stylesheet" href="./css/styles.css" />
+   
+  </head>
 
+  <body>
     <header>
-        <h1>Portal de Notícias do IBGE</h1>
+      <h1>Portal de Notícias do IBGE</h1>
 
-        <div class="filtro">
-            <div class="pesquisa">
-                <form class="form-pesquisa">
-                    <input type="text" placeholder="Buscar Notícia">
-                    <button type="submit">Pesquisar🔍</button>
-                </form>
-            </div>
-        
-
-            <div class="conteiner-filtro">
-                <svg    
-                width="20"
-                height="20"
-                fill="#f0f0f0"
-                viewBox="0 0 80 90"
-                focusable="false"
-                xmlns="http://www.w3.org/2000/svg"
-                >
-                <path d="m 0,0 30,45 0,30 10,15 0,-45 30,-45 Z"></path>
-                </svg>
-                <span class="icon-filtro">0</span>
-            </div>
+      <div class="filtros">
+        <div class="input-pesquisa">
+          <form class="form-busca">
+            <input type="text" placeholder="Buscar notícia por termo" />
+            <button type="submit">🔍</button>
+          </form>
         </div>
 
-        <dialog class="modal-filtro">
-            <form class="form-filtro">
-                <button class="botão-fecha">❌</button>
+        <div class="icone-filtro-container">
+          <svg
+            class="icone-filtro"
+            width="20"
+            height="20"
+            fill="#f0f0f0"
+            viewBox="0 0 80 90"
+            focusable="false"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="m 0,0 30,45 0,30 10,15 0,-45 30,-45 Z"></path>
+          </svg>
+          <span class="icone-filtro-contador">0</span>
+        </div>
+      </div>
 
-                <div class="filtro-categoria">
-                    <div class="categoria">
-                        <label for="tipo">Tipo</label>
-                        <select id="tipo" name="tipo">
-                            <option value="todos">Selecione</option>
-                            <option value="noticia">Notícia</option>
-                            <option value="release">Release</option>
-                        </select>
-                    </div>
+      <dialog class="dialog-filtro">
+        <form class="dialog-filtro-form">
+          <div class="dialog-filtro-input">
+            <label for="tipo">Tipo:</label>
+            <select id="tipo" name="tipo">
+              <option value="">Selecione</option>
+              <option value="noticia">Notícias</option>
+              <option value="release">Release</option>
+            </select>
+          </div>
 
-                    <div class="categoria">
-                        <label for="quantidade">Quantidade</label>
-                        <select id="quantidade" name="quantidade">
-                            <option value="todos">Selecione</option>
-                            <option value="5">5</option>
-                            <option value="10" selected>10</option>
-                            <option value="15">15</option>
-                            <option value="20">20</option>
-                        </select>
-                    </div>
-                </div>
+          <div class="dialog-filtro-input">
+            <label for="quantidade">Quantidade:</label>
+            <select id="quantidade" name="quantidade">
+              <option value="5">5</option>
+              <option value="10" selected>10</option>
+              <option value="15">15</option>
+              <option value="20">20</option>
+            </select>
+          </div>
 
-                <div class="filtro-categoria">
-                    <div class="categoria">
-                        <label for="de">De</label>
-                        <input type="date" id="De" name="De">
-                    </div>
+          <div class="dialog-filtro-input">
+            <label for="de">De:</label>
+            <input type="date" id="de" name="de" />
+          </div>
 
-                    <div class="categoria">
-                        <label for="ate">Até</label>
-                        <input type="date" id="ate" name="ate">
-                    </div>
-                </div>
+          <div class="dialog-filtro-input">
+            <label for="ate">Até:</label>
+            <input type="date" id="ate" name="ate" />
+          </div>
 
-                <button class="botao-aplica-filtro" type="submit">Aplicar Filtro</button>
-            </form>
-        </dialog>
+          <button class="dialog-filtro-fechar">❌</button>
+          <button class="dialog-filtro-aplicar" type="submit">Aplicar</button>
+        </form>
+      </dialog>
     </header>
 
     <main>
-        <section>
-            <ul class="lista-noticia"></ul>
-            <ul class="lista-pagina"></ul>
-        </section>
+      <section>
+        <ul class="lista-noticias"></ul>
+        <ul class="lista-paginacao"></ul>
+      </section>
     </main>
 
     <footer>
-        <p>&copy; Prova do segundo bimestre - Programação WEB</p>
+      <p>&copy; Prova do segundo bimestre - Programação WEB</p>
     </footer>
 
-    
-</body>
+    <script src="js/main.js"></script>
+  
+  </body>
 </html>
