--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="filtros">
         <div class="input-pesquisa">
           <form class="form-busca">
-            <input type="text" placeholder="Buscar notícia por termo" />
+            <input type="text" placeholder="Buscar Notícias" />
             <button type="submit">🔍</button>
           </form>
         </div>
@@ -38,8 +38,8 @@
       </div>
 
       <dialog class="dialog-filtro">
-        <form class="dialog-filtro-form">
-          <div class="dialog-filtro-input">
+        <form class="filtro-formulario">
+          <div class="input-filtro">
             <label for="tipo">Tipo:</label>
             <select id="tipo" name="tipo">
               <option value="">Selecione</option>
@@ -48,7 +48,7 @@
             </select>
           </div>
 
-          <div class="dialog-filtro-input">
+          <div class="input-filtro">
             <label for="quantidade">Quantidade:</label>
             <select id="quantidade" name="quantidade">
               <option value="5">5</option>
@@ -58,26 +58,26 @@
             </select>
           </div>
 
-          <div class="dialog-filtro-input">
+          <div class="input-filtro">
             <label for="de">De:</label>
             <input type="date" id="de" name="de" />
           </div>
 
-          <div class="dialog-filtro-input">
+          <div class="input-filtro">
             <label for="ate">Até:</label>
             <input type="date" id="ate" name="ate" />
           </div>
 
-          <button class="dialog-filtro-fechar">❌</button>
-          <button class="dialog-filtro-aplicar" type="submit">Aplicar</button>
+          <button class="fechar-filtro">❌</button>
+          <button class="aplicar-filtro" type="submit">Aplicar</button>
         </form>
       </dialog>
     </header>
 
     <main>
       <section>
-        <ul class="lista-noticias"></ul>
-        <ul class="lista-paginacao"></ul>
+        <ul class="lista-noticia"></ul>
+        <ul class="lista-pagina"></ul>
       </section>
     </main>
 
