--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portal de Notícias do IBGE</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="icon" href="./img/favicon-32x32.png">
    
   </head>
 
